bug #87370 (r=dougt sr=mscott).  Allow OnStopRequest to be called multiple times (more multipart content) and make sure that OnStopRequest is called even if the channel load fails...